<resources>
    <string name="app_name">Reminders</string>
    <string name="title_reminder_detail">Reminder Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="details">Details</string>
    <string name="add">Add</string>
    <string name="time">Time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="title">Title</string>


</resources>
