<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2017 - present, Xuan Wang
  ~  All rights reserved.
  ~  
  ~  This source code is licensed under the BSD-style license found in the
  ~  LICENSE file in the root directory of this source tree.
  ~  
  -->



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/reminder_detail_container"

        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/title"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/titleView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/mon"
                android:layout_weight="1" />
            <CheckBox
                android:text="@string/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/tue"
                android:layout_weight="1" />
            <CheckBox
                android:text="@string/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/wed"
                android:layout_weight="1" />
            <CheckBox
                android:text="@string/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/thu"
                android:layout_weight="1" />

            <CheckBox
                android:text="@string/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/fri"
                android:layout_weight="1" />
            <CheckBox
                android:text="@string/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/sat"
                android:layout_weight="1" />
            <CheckBox
                android:text="@string/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:id="@+id/sun"
                android:layout_weight="1" />
        </LinearLayout>


        <TextView
            android:text="@string/time"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeView" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/details"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/detailView" />
            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textAllCaps="false"
                style="@style/MyButtonStyle"
                android:id="@+id/editButton"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAllCaps="false"
                style="@style/MyButtonStyle"
                android:id="@+id/deleteButton" />
        </LinearLayout>


    </LinearLayout>
